--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
+    "animejs": "^3.2.1",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "immer": "^10.0.2",
